chore: java 17 and sonar warnings [DHIS2-15280]